@@ -1,3 +1,12 @@
+2005-07-18  Martin Hunt  <hunt@redhat.com>
+
+	* transport.h (_stp_transport_write): Call _stp_relay_write().
+
+	* transport.c (_stp_cleanup_and_exit): Print transport
+	failure count.
+	(_stp_relay_write): Like relay_write() except returns
+	-1 on error.
+
 2005-07-14  Tom Zanussi  <zanussi@us.ibm.com>
 
 	* netlink.c (_stp_netlink_open): Add missing delayed_pkts
